Adding Set game

--- a/Matchismo/Matchismo-Info.plist
+++ b/Matchismo/Matchismo-Info.plist
@@ -18,6 +18,8 @@
 				<string>cards_57.png</string>
 				<string>card_114.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -38,6 +40,8 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
